--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -38,6 +38,7 @@
     <ClInclude Include="src\lib\File.h" />
     <ClInclude Include="src\lib\Path.h" />
     <ClInclude Include="src\lib\Point2.h" />
+    <ClInclude Include="src\calc\SinPeriodValue.h" />
     <ClInclude Include="src\lib\String.h" />
     <ClInclude Include="src\render\common\BackgroundSphere.h" />
     <ClInclude Include="src\render\debug\DebugBackgroundRenderer.h" />
@@ -142,6 +143,7 @@
     <ClCompile Include="src\lib\File.cpp" />
     <ClCompile Include="src\lib\Path.cpp" />
     <ClCompile Include="src\lib\Point2.cpp" />
+    <ClCompile Include="src\calc\SinPeriodValue.cpp" />
     <ClCompile Include="src\lib\String.cpp" />
     <ClCompile Include="src\model\track\LoopTrack.cpp" />
     <ClCompile Include="src\model\VelocityFunction.cpp" />
