--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -94,6 +94,7 @@
     <ClInclude Include="src\lib\CycledArrayIterator.h" />
     <ClInclude Include="src\gl\TexturedRect.h" />
     <ClInclude Include="src\ui\MenuItemSelector.h" />
+    <ClInclude Include="src\calc\SinPeriodValue.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -177,6 +178,7 @@
     <ClCompile Include="src\render\ui\PauseMenuRenderer.cpp" />
     <ClCompile Include="src\render\ui\ScreenRendererCollection.cpp" />
     <ClCompile Include="src\gl\TexturedRect.cpp" />
+    <ClCompile Include="src\calc\SinPeriodValue.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
