--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\anx\RandomSpherePoints.h" />
+    <ClInclude Include="src\audio\AudioSample.h" />
     <ClInclude Include="src\core\IGameStarter.h" />
     <ClInclude Include="src\core\IPauseSwitcher.h" />
     <ClInclude Include="src\core\TrackManager.h" />
@@ -58,6 +59,15 @@
     <ClInclude Include="src\ui\ScreenManager.h" />
     <ClInclude Include="src\ui\StartMenuScreen.h" />
     <ClInclude Include="src\ui\TrackSelectorScreen.h" />
+    <ClInclude Include="src\vox\GameVox.h" />
+    <ClInclude Include="src\vox\MenuItemVox.h" />
+    <ClInclude Include="src\vox\PauseMenuVox.h" />
+    <ClInclude Include="src\vox\SampleCollection.h" />
+    <ClInclude Include="src\vox\ScreenVox.h" />
+    <ClInclude Include="src\vox\ScreenVoxCollection.h" />
+    <ClInclude Include="src\vox\StartMenuVox.h" />
+    <ClInclude Include="src\vox\TrackSelectorVox.h" />
+    <ClInclude Include="src\vox\VoxManager.h" />
     <ClInclude Include="src\win\resource.h" />
     <ClInclude Include="src\anx\TrackBuilder.h" />
     <ClInclude Include="src\calc\Plane.h" />
@@ -118,6 +128,7 @@
   <ItemGroup>
     <ClCompile Include="src\anx\RandomSpherePoints.cpp" />
     <ClCompile Include="src\anx\TrackBuilder.cpp" />
+    <ClCompile Include="src\audio\AudioSample.cpp" />
     <ClCompile Include="src\calc\LineIntersector.cpp" />
     <ClCompile Include="src\calc\Plane.cpp" />
     <ClCompile Include="src\calc\Quaternion.cpp" />
@@ -178,6 +189,13 @@
     <ClCompile Include="src\ui\ScreenManager.cpp" />
     <ClCompile Include="src\ui\StartMenuScreen.cpp" />
     <ClCompile Include="src\ui\TrackSelectorScreen.cpp" />
+    <ClCompile Include="src\vox\GameVox.cpp" />
+    <ClCompile Include="src\vox\PauseMenuVox.cpp" />
+    <ClCompile Include="src\vox\SampleCollection.cpp" />
+    <ClCompile Include="src\vox\ScreenVoxCollection.cpp" />
+    <ClCompile Include="src\vox\StartMenuVox.cpp" />
+    <ClCompile Include="src\vox\TrackSelectorVox.cpp" />
+    <ClCompile Include="src\vox\VoxManager.cpp" />
     <ClCompile Include="src\win\main.cpp" />
     <ClInclude Include="src\core\Constants.h" />
     <ClCompile Include="src\core\GameInitializer.cpp" />
@@ -205,10 +223,6 @@
     <ResourceCompile Include="res\Starlight.rc" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="res\bg1.jpg">
-      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</DeploymentContent>
-      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</DeploymentContent>
-    </Image>
     <Image Include="res\main.ico" />
   </ItemGroup>
   <ItemGroup>
