--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -12,7 +12,7 @@
     <ClInclude Include="src\lib\List.h" />
     <ClInclude Include="src\core\Game.h" />
     <ClInclude Include="src\model\Ship.h" />
-    <ClInclude Include="src\core\GameInitializer.h" />
+    <ClInclude Include="src\core\RaceInitializer.h" />
     <ClInclude Include="src\model\Track.h" />
     <ClInclude Include="src\lib\HashCode.h" />
     <ClInclude Include="src\core\RaceUpdater.h" />
@@ -118,7 +118,7 @@
     <ClCompile Include="src\calc\SegmentIntersector.cpp" />
     <ClCompile Include="src\core\Game.cpp" />
     <ClCompile Include="src\model\Ship.cpp" />
-    <ClCompile Include="src\core\GameInitializer.cpp" />
+    <ClCompile Include="src\core\RaceInitializer.cpp" />
     <ClCompile Include="src\model\Track.cpp" />
     <ClCompile Include="src\lib\HashCode.cpp" />
     <ClCompile Include="src\core\RaceUpdater.cpp" />
