--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -71,7 +71,7 @@
     <ClInclude Include="src\lib\Point2.h" />
     <ClInclude Include="src\lib\Assert.h" />
     <ClInclude Include="src\gl\Mesh.h" />
-    <ClInclude Include="src\core\Resources.h" />
+    <ClInclude Include="src\anx\GraphicResources.h" />
     <ClInclude Include="src\core\Constants.h" />
     <ClInclude Include="src\gl\MeshLoader.h" />
     <ClInclude Include="src\gl\Face.h" />
@@ -109,6 +109,7 @@
     <ClInclude Include="src\audio\WavFile.h" />
     <ClInclude Include="src\core\Race.h" />
     <ClInclude Include="src\render\ui\MenuItemCollection.h" />
+    <ClInclude Include="src\anx\AudioResources.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -175,7 +176,7 @@
     <ClCompile Include="src\lib\Point2.cpp" />
     <ClCompile Include="src\lib\Assert.cpp" />
     <ClCompile Include="src\gl\Mesh.cpp" />
-    <ClCompile Include="src\core\Resources.cpp" />
+    <ClCompile Include="src\anx\GraphicResources.cpp" />
     <ClCompile Include="src\gl\MeshLoader.cpp" />
     <ClCompile Include="src\gl\Face.cpp" />
     <ClCompile Include="src\input\Keyboard.cpp" />
@@ -206,6 +207,7 @@
     <ClCompile Include="src\audio\WavFile.cpp" />
     <ClCompile Include="src\core\Race.cpp" />
     <ClCompile Include="src\render\ui\MenuItemCollection.cpp" />
+    <ClCompile Include="src\anx\AudioResources.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
