--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -110,6 +110,7 @@
     <ClInclude Include="src\core\Race.h" />
     <ClInclude Include="src\render\ui\MenuItemCollection.h" />
     <ClInclude Include="src\anx\AudioResources.h" />
+    <ClInclude Include="src\render\effect\Fade.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -208,6 +209,7 @@
     <ClCompile Include="src\core\Race.cpp" />
     <ClCompile Include="src\render\ui\MenuItemCollection.cpp" />
     <ClCompile Include="src\anx\AudioResources.cpp" />
+    <ClCompile Include="src\render\effect\Fade.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
