--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -48,7 +48,7 @@
     <ClInclude Include="src\render\common\MenuBackgroundRenderer.h" />
     <ClInclude Include="src\render\debug\DebugBackgroundRenderer.h" />
     <ClInclude Include="src\render\common\StarsRenderer.h" />
-    <ClInclude Include="src\render\effect\Fade.h" />
+    <ClInclude Include="src\render\effect\FadeEffect.h" />
     <ClInclude Include="src\render\ui\MenuItemCollection.h" />
     <ClInclude Include="src\render\ui\PauseMenuRenderer.h" />
     <ClInclude Include="src\render\ui\RacePreparationRenderer.h" />
@@ -182,7 +182,7 @@
     <ClCompile Include="src\render\common\MenuBackgroundRenderer.cpp" />
     <ClCompile Include="src\render\debug\DebugBackgroundRenderer.cpp" />
     <ClCompile Include="src\render\common\BackgroundRenderer.cpp" />
-    <ClCompile Include="src\render\effect\Fade.cpp" />
+    <ClCompile Include="src\render\effect\FadeEffect.cpp" />
     <ClCompile Include="src\render\ui\MenuItemCollection.cpp" />
     <ClCompile Include="src\render\ui\RacePreparationRenderer.cpp" />
     <ClCompile Include="src\render\ui\RaceRenderer.cpp" />
