--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -110,7 +110,7 @@
     <ClInclude Include="src\core\Race.h" />
     <ClInclude Include="src\render\ui\MenuItemCollection.h" />
     <ClInclude Include="src\anx\AudioResources.h" />
-    <ClInclude Include="src\render\effect\Fade.h" />
+    <ClInclude Include="src\render\effect\FadeEffect.h" />
     <ClInclude Include="src\render\ui\SelectedItemColor.h" />
     <ClInclude Include="src\render\ui\RenderConstants.h" />
     <ClInclude Include="src\ui\RacePreparationScreen.h" />
@@ -214,7 +214,7 @@
     <ClCompile Include="src\core\Race.cpp" />
     <ClCompile Include="src\render\ui\MenuItemCollection.cpp" />
     <ClCompile Include="src\anx\AudioResources.cpp" />
-    <ClCompile Include="src\render\effect\Fade.cpp" />
+    <ClCompile Include="src\render\effect\FadeEffect.cpp" />
     <ClCompile Include="src\render\ui\SelectedItemColor.cpp" />
     <ClCompile Include="src\ui\RacePreparationScreen.cpp" />
     <ClCompile Include="src\render\ui\RacePreparationRenderer.cpp" />
